--- a/inedx.html
+++ b/inedx.html
@@ -21,7 +21,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<img class="class img-responsive" src="img/image.jpeg">
+				<img class="class img-responsive" src="image.jpeg">
 			</div>
 			<div class="col-md-6 pt-5">
 				<h1>welcome back !</h1>
@@ -34,9 +34,9 @@
 				   <button class="uncle">LOGIN</button>
 				   <p class="as">FORGET PASSWORD ?</p>
 				   <p class="see">Login with</p>
-                   <img class="de" src="img/goggle.png">
-                    <img class="de" src="img/facebook.png">
-                     <img class="de" src="img/twitter.png">
+                   <img class="de" src="goggle.png">
+                    <img class="de" src="facebook.png">
+                     <img class="de" src="twitter.png">
 				
 			</form>
 			
