--- a/inedx.html
+++ b/inedx.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="col-md-6 pt-5">
 				<h1>welcome back !</h1>
-				<p>Login to continue</p>
+				<p>Login to cogihudfgiufhgntinue</p>
 				<form class="pt-5">
 					
 					<input class="nora" type="text" name="" placeholder="username111@gmail.com">
